# ai-toolkit

./: .gitignore  .matt-pocock-attribution.yml  AGENTS.md  CLAUDE.md  DEVELOPER.md  LOCAL-FIRST-WORKFLOW.md  README.md  constraints.md  evals.md  intent.md
claude/agents/: README.md  axum-scaffold-agent.md  cargo-package-scaffold-agent.md  code-review-agent.md  confluence-guide-writer.md  context-builder-agent.md  dependency-audit-agent.md  environment-health-agent.md  fastapi-scaffold-agent.md  fleet-deployment-agent.md  migration-orchestrator.md  model-optimization-agent.md  pypi-package-agent.md  python-feature-slice-agent.md  python-modernization-agent.md  python-security-agent.md  research-agent.md  rpi-code-analyzer.md  rpi-file-locator.md  rpi-implement.md  rpi-pattern-finder.md  rpi-planner.md  rust-arch-checklist-agent.md  rust-feature-slice-agent.md  rust-migration-agent.md  sensor-anomaly-agent.md  spec-extractor-agent.md  sqlx-migration-agent.md  tdd-agent.md  test-generation-agent.md
claude/commands/: arch-review.md  code-review.md  context-prime.md  evaluate-tests.md  grill-me.md  grill-with-docs.md  migrate.md  new-feature.md  oss-vetting.md  para-file.md  para-review.md  qraspi-architecture.md  qraspi-graduate.md  qraspi-implement.md  qraspi-plan.md  qraspi-questions.md  qraspi-research.md  qraspi-skeleton.md  qrspi-implement.md  qrspi-plan.md  qrspi-questions.md  qrspi-research.md  qrspi-spec.md  research.md  security-review.md  tdd-cycle.md  tdd.md
claude/global/: CLAUDE.md  README.md  settings.json  settings.local.json  statusline.sh
docs/: LOCAL-AI-CHEATSHEET.md  LOCAL-FIRST-WORKFLOW.md  audit-remediation-plan.md  rpi-and-spec-driven-dev-overview.md  structured-workflows-overview.md
global/: AGENTS.md  CLAUDE.md
ollama/modelfiles/: gemma4-31b-agent.Modelfile  granite4.1-30b-agent.Modelfile  qwen3-30b-a3b-agent.Modelfile  qwen3-32b-agent.Modelfile  qwen3-coder-30b-agent.Modelfile  qwen3.6-27b-agent.Modelfile  qwen3.6-35b-a3b-agent.Modelfile
opencode/agents/: README.md  axum-scaffold-agent.md  code-review-agent.md  confluence-guide-writer.md  context-builder-agent.md  dependency-audit-agent.md  documentation-agent.md  environment-health-agent.md  fastapi-scaffold-agent.md  fleet-deployment-agent.md  migration-orchestrator.md  model-optimization-agent.md  pm-capture-agent.md  pypi-package-agent.md  python-feature-slice-agent.md  python-federal-security-agent.md  research-agent.md  rpi-code-analyzer.md  rpi-file-locator.md  rpi-implement.md  rpi-pattern-finder.md  rpi-planner.md  rust-feature-slice-agent.md  rust-migration-agent.md  sensor-anomaly-agent.md  spec-extractor-agent.md  task-decomposition-agent.md  tdd-agent.md  test-generation-agent.md
opencode/commands/: arch-review.md  code-review.md  context-prime.md  grill-me.md  (+23 more)
pi/: SKILLS-local.md
project-templates/: AGENTS.md  CLAUDE.md  README.md  constraints.md  domain-memory.md  evals.md
scripts/: add_frontmatter.py  install-agents.ps1  install-agents.sh  install-claude.ps1  install-claude.sh  install-opencode.ps1  install-opencode.sh  install-pi.ps1  install-pi.sh
shared/: friend-starter-CLAUDE.md
skills/: README.md
subagents/: README.md
thoughts/: qraspi-implementation-log-slice-1.md  qraspi-implementation-log-slice-2.md  qraspi-implementation-log-slice-3.md  qraspi-plan.md  qraspi-research.md  qrspi-implementation-log-slice-1.md  qrspi-implementation-log-slice-2.md  qrspi-implementation-log-slice-3.md  qrspi-implementation-log-slice-4.md  qrspi-implementation-log-slice-5.md  qrspi-implementation-log-slice-6.md  qrspi-plan.md  qrspi-research.md  skills-complexity-review.md
tools/code2md/: .gitignore  README.md  pyproject.toml
tools/code2md/docs/: enrichment-design.md  enrichment-roadmap.md
tools/code2md/src/code2md/: cli.py  converter.py  language.py  models.py  overview.py  walker.py
tools/code2md/src/code2md/enrich/: __init__.py  cache.py  config.py  ollama_client.py  relate_cache.py  relationships.py  scandoc.py  summarize.py  verify.py
tools/code2md/src/code2md/prompts/: relationships.txt  summarize.txt  verify_edge.txt
tools/code2md/tests/: conftest.py  test_cli.py  test_converter.py  test_enrich.py  test_language.py  test_models.py  test_ollama_client.py  test_overview.py  test_relate_cache.py  test_relationships.py  test_relationships_extract.py  test_relationships_render.py  test_verify.py  test_walker.py
tools/ollama-evals/: .gitignore  README.md  models.yaml  pyproject.toml
tools/ollama-evals/datasets/: chat.jsonl  coding.jsonl  judge-calibration.jsonl  structured.jsonl  tool_use.jsonl
tools/ollama-evals/src/ollama_evals/: __init__.py  calibrate.py  cases.py  cli.py  client.py  compare.py  config.py  judging.py  report.py  runner.py
tools/ollama-evals/src/ollama_evals/scorers/: __init__.py  base.py  code_exec.py  deterministic.py  judge.py  tool_use.py
tools/ollama-evals/tests/: test_calibrate.py  test_cli.py  test_client.py  test_code_exec.py  test_compare.py  test_config.py  test_datasets.py  test_judge.py  test_report.py  test_runner.py  test_scorers_deterministic.py  test_tool_use.py
tools/pdf2md/: .gitignore  README.md  pyproject.toml
tools/pdf2md/src/pdf2md/: cleaner.py  cli.py  code_detector.py  code_language.py  converter.py  extractor.py  heading_detector.py  image_extractor.py  markdown_builder.py  models.py  table_detector.py
tools/pdf2md/src/pdf2md/engines/: __init__.py  base.py  docling_engine.py  fast.py
tools/pdf2md/tests/: conftest.py  test_cleaner.py  test_cli.py  test_code_detector.py  test_code_language.py  test_converter.py  test_engines.py  test_heading_detector.py  test_markdown_builder.py  test_table_detector.py
tools/web2md/: .gitignore  KNOWN-ISSUES.md  README.md  pyproject.toml
tools/web2md/src/web2md/: cli.py  converter.py  crawler.py  models.py  sitemap.py
tools/web2md/tests/: conftest.py  test_cli.py  test_converter.py  test_crawler.py  test_models.py  test_sitemap.py
(+688 files in other folders)
