[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code2md"
version = "0.2.0"
description = "Scan a codebase into language-tagged Markdown for RAG ingestion (grounded-code-mcp)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pathspec>=0.12",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
code2md = "code2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=code2md --cov-report=term-missing"

[tool.coverage.run]
source = ["src/code2md"]
