[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code2md"
version = "0.2.0"
description = "Scan a codebase into language-tagged Markdown for RAG ingestion (grounded-code-mcp)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pathspec>=0.12",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit[toml]>=1.7",
]

[project.scripts]
code2md = "code2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=code2md --cov-report=term-missing"

[tool.coverage.run]
source = ["src/code2md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests"]
