[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-evals"
version = "0.1.0"
description = "Evaluate and regression-test local Ollama models for coding, chat, tool-use, and structured output"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
    "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]
# The LLM-as-judge scorers use DeepEval (native Ollama support). It is optional so the
# deterministic + code-execution suites run with a minimal dependency footprint.
judge = [
    "deepeval>=1.4",
]

[project.scripts]
ollama-evals = "ollama_evals.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ollama_evals --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ollama_evals"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
