[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Convert PDF files to AI-agent-friendly Markdown"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "reportlab>=4",
]
docling = [
    "docling>=2.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pdf2md --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pdf2md"]
