[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web2md"
version = "0.1.0"
description = "Convert web pages and documentation sites to AI-agent-friendly Markdown"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "docling>=2.0",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
]

[project.scripts]
web2md = "web2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/web2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=web2md --cov-report=term-missing"

[tool.coverage.run]
source = ["src/web2md"]
