[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web2md"
version = "0.1.0"
description = "Convert web pages and documentation sites to AI-agent-friendly Markdown"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "docling>=2.0",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit[toml]>=1.7",
]

[project.scripts]
web2md = "web2md.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/web2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=web2md --cov-report=term-missing"

[tool.coverage.run]
source = ["src/web2md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# numpy is a transitive docling dependency; its published stubs use 3.12+ `type`
# statement syntax that mypy rejects under the pinned 3.10 target. Skip analyzing it.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.bandit]
exclude_dirs = ["tests"]
